# wolpertinger

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  create_db.py  wolper-services  wolpertinger.sql
docs/: Makefile.am  Makefile.in
scripts/: Makefile.am  Makefile.in  wolper-init.sh  wolper-mcp.py
src/: Makefile.am  Makefile.in  database.cc  database.h  drone.cc  drone.h  ipc.cc  ipc.h  main.cc  main.h  shared.cc  shared.h  wolperdrone.cc  wolperdrone.h
